Remove shaded Guava from Paimon tests